# MoonEngine

./: .clang-format  .clang-tidy  CMakeLists.txt
Moon/: CMakeLists.txt
Moon/include/: EngineFactory.h
Moon/include/Core/: Engine.h  WinMainCommandParameters.h
Moon/include/Debug/: Log.h
Moon/include/Platform/Windows/: WindowsEngine.h  WindowsMessageProcessing.h
Moon/src/: EngineFactory.cpp  MoonEngine.cpp
Moon/src/Engine/: Engine.cpp
Moon/src/Engine/Core/: Engine.cpp  WinMainCommandParameters.cpp
Moon/src/Engine/Debug/: Log.cpp
Moon/src/Engine/Platform/Windows/: WindowsEngine.cpp  WindowsMessageProcessing.cpp
